# rygnal-core

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  go.mod  go.sum  pyproject.toml  requirements-dev.txt
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
demo/: demo_tools.py  mock_agent.py  run_demo.py
docs/: 00-index.md  01-research-before-building.md  02-tools-and-tech-stack.md  03-production-architecture.md  04-low-cost-production-plan.md  05-mvp-demo-plan.md  12-runtime-modes.md  15-docker-setup.md  20-langchain-integration.md  24-policy-engine-v2-schema.md  30-richer-policy-match-fields.md  42-m1-guarded-workspace-lifecycle.md  43-m1-real-guarded-runner.md  44-m1-guarded-runner-test-plan.md
examples/: langchain_tool_wrapper.py
policies/: default_policy.yaml  production_safe_policy.yaml
rust-kernel/: Cargo.toml  pyproject.toml
rust-kernel/src/: ast.rs  criticality.rs  lib.rs  models.rs  path_safety.rs  subjective.rs
schemas/: engine_event.schema.json  engine_request.schema.json
tests/: __init__.py  guarded_runner_helpers.py  test_approval_queue_api.py  test_approved_apply.py  test_audit_query.py  test_audit_query_hardening.py  test_change_gate.py  test_change_risk.py  test_cli_run.py  test_cli_run_integration.py  test_diff_limits.py  test_docker_setup.py  test_engine_api.py  test_engine_api_schema.py  test_guarded_runner.py  test_guarded_runner_hostile.py  test_guarded_runner_integration.py  test_guarded_workspace_lifecycle.py  test_patch_diff.py  (+29 more)
(+48 files in other folders)
