[package]
name = "rygnal-kernel"
version = "0.1.0"
edition = "2021"

[lib]
name = "rygnal_kernel"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tree-sitter = "0.20"
tree-sitter-python = "0.20"
